--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/server": "^11.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
     "lucide-react": "^0.501.0",
